fixed form, fixed titles properly

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,6 +9,6 @@
 %h2 Create new paste
 
 %form{:action => "", :method => "post"}
-  %textarea{:name => "room[body]"}
-  %input{:type => "checkbox", :name => "room[private]", :value => "true"}
+  %textarea{:name => "paste[body]"}
+  %input{:type => "checkbox", :name => "paste[private]", :value => "true"}
   %input{:type => "submit", :value => "Paste"}
