changed highlight.js into production version

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
 
 %link{:rel => 'stylesheet', :href => url('highlight/styles/default.css')}
 
-%script{:src => url('/highlight/highlight.js')}
+%script{:src => url('/highlight/highlight.pack.js')}
 :javascript
   hljs.initHighlightingOnLoad();
 
