un-broke highlighting, added versioned_css helper

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
 %title= @title
 
 %link{:rel => 'stylesheet', :href => versioned_sass('stylesheet')}
+%link{:rel => 'stylesheet', :href => versioned_css('highlight/github')}
 
 %script{:src => versioned_js('highlight.pack')}
 :javascript
