--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,6 +13,9 @@
 %br
 %a{:href => to('/pastes')}
   %strong recent
+%br
+%a{:href => 'https://github.com/pollyzoid/pastest'}
+  %strong code
 
 #content
   != yield
